# PokerAI

./: .gitignore  CMakeLists.txt  Driver.cpp  HandEval.cpp  HandEval.h  HandIter.h  Hand_Tables.cpp  ProbEval.cpp  ProbEval.h  TestCases.cpp  play_match.pl
Include/: HandEval.h  HandIter.h  ProbEval.h  TestCases.h  Utilities.h
project_acpc_server/: CMakeLists.txt  CPlayer.cpp  CPlayer.h  Makefile  ParentPlayer.cpp  ParentPlayer.h  bm_run_matches.c  bm_widget.c  dealer.c  example_player.cpp  game.c  game.h  net.c  player1.cpp  player1.limit.2p.sh
src/: CMakeLists.txt  Dealer.cpp  Dealer.h  Driver.cpp  HandIter.cpp  Hand_Tables.cpp  ProbEval.cpp  TestCases.cpp
